# Phineas

./: .gitignore  ENDPOINT_GUIDE.md  EXCHANGE_INTEGRATION_REPORT.md  MIGRATION_REPORT.md  README.md  index.js  package.json  pyproject.toml  test_api_simple.py  test_coindesk_migration.py  test_exchanges.py  test_exchanges_simple.py
src/phineas/: agent.py  cli.py  model.py  prompts.py
src/phineas/evals/: dataset.py  evaluator.py  run_evaluate.py
src/phineas/evals/data/: loader.py
src/phineas/tools/: __init__.py
src/phineas/tools/crypto/: api.py  cache.py  ohlc.py  prices.py  rate_limiter.py  validators.py  volatility.py
src/phineas/tools/crypto/exchanges/: coinbase_api.py  exchange_prices.py  kraken_api.py
src/phineas/tools/finance/: estimates.py  filings.py  fundamentals.py  metrics.py  news.py  prices.py  segments.py
src/phineas/tools/search/: google.py  utils.py
src/phineas/utils/: context.py  intro.py  logger.py  ui.py
